@@ -102,13 +102,13 @@ TYPEGEN = $(BUILDDIR)/buildtools/typegen
 # endiangen is a utility program used by the make file below.
 ENDIANGEN = $(BUILDDIR)/buildtools/endiangen
 
-$(TYPEGEN): $(BUILDDIR)/buildtools
+$(TYPEGEN) $(ENDIANGEN): $(BUILDDIR)/buildtools
 	$(MAKE) -C $(dir $@) -f $(SRCDIR)/buildtools/Makefile \
 	    SRCDIR=$(SRCDIR) BUILDDIR=$(BUILDDIR) $(notdir $@) 
 
 DELETEIT = (rm -f $@ || false)
 
-$(BUILDDIR)/inttypes_netpbm.h: $(TYPEGEN)
+inttypes_netpbm.h: $(TYPEGEN)
 	$(TYPEGEN) >$@ || $(DELETEIT)
 
 # We run a couple of programs on the build machine in computing the
@@ -116,7 +116,7 @@ $(BUILDDIR)/inttypes_netpbm.h: $(TYPEGEN)
 # that or to override the results, because it doesn't work if he's
 # cross compiling.
 
-$(BUILDDIR)/pm_config.h: \
+pm_config.h: \
   $(SRCDIR)/pm_config.in.h Makefile.config inttypes_netpbm.h \
   $(ENDIANGEN)
 	echo '/* pm_config.h GENERATED BY A MAKE RULE */' >$@ || $(DELETEIT)
@@ -145,7 +145,7 @@ endif
 MAJOR := $(NETPBM_MAJOR_RELEASE)
 MINOR := $(NETPBM_MINOR_RELEASE)
 POINT := $(NETPBM_POINT_RELEASE)
-$(BUILDDIR)/version.h:
+version.h:
 	@rm -f $@
 	@echo "/* Generated by make file rule */" >$@
 	@echo "#define NETPBM_VERSION" \
@@ -350,7 +350,7 @@ install.hdr: $(PKGDIR)/include
 	$(MAKE) -C lib -f $(SRCDIR)/lib/Makefile \
 	    SRCDIR=$(SRCDIR) BUILDDIR=$(BUILDDIR) install.hdr
 	$(INSTALL) -c -m $(INSTALL_PERM_HDR) \
-	    $(SRCDIR)/pm_config.h $(PKGDIR)/include
+	    $(BUILDDIR)/pm_config.h $(PKGDIR)/include
 
 ifeq ($(STATICLIB_TOO),y)
 BUILD_STATIC = y
